Add Monthly favorites section

--- a/index.html
+++ b/index.html
@@ -36,6 +36,44 @@
         <!-- /.quotes -->
         <hr>
 
+        <!-- Favorites -->
+        <section class="monthly-favorites">
+            <h2 class="text-uppercase">Monthly favorites:</h2>
+            <table class="table">
+                <thead class="thead-dark">
+                  <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Origin</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Scotch Whisky</td>
+                    <td>Scotland</td> 
+                  </tr>
+                  <tr>    
+                    <td>Bourbon Whiskey</td>
+                    <td>United States</td>                   
+                  </tr>
+                  <tr>                  
+                    <td>Irish Whiskey</td>
+                    <td>Ireland</td>                 
+                  </tr>
+                  <tr>
+                    <td>Japanese Whisky</td>
+                    <td>Japan</td>
+                  </tr>
+                  <tr>
+                    <td>Canadian Whisky</td>
+                    <td>Canada</td>       
+                  </tr>
+                </tbody>
+              </table>         
+              
+        </section>
+        <!-- /.Favorites -->
+        <hr>
+
         <!-- Features -->
         <section class="features">
             <h2 class="text-uppercase">Features:</h2>
