Add container classes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <!--</div>-->
     </nav>
-    <article class="container mt-3">
+    <div class="container alert-container">
         <div class="row d-none d-sm-block">
             <div class="col-12">
                 <div class="alert alert-warning">
@@ -77,8 +77,9 @@
             </div>
         </div>
         <!-- /.callout -->
-        <hr>
-        <!-- Quotes -->
+    </div>
+    <!-- Quotes -->
+    <div class="container quotes-container">
         <section class="quotes">
             <div class="row">
                 <div class="col-12 my-5">
@@ -119,8 +120,10 @@
                 </div>
         </section>
         <!-- /.quotes -->
-        <hr>
-        <!-- Features -->
+    </div>
+
+    <!-- Features -->
+    <div class="features-container">
         <section class="features">
             <div class="row">
                 <div class="col-12 my-5">
@@ -161,7 +164,7 @@
             </div>
         </section>
         <!-- /.features -->
-    </article>
+    </div>
 
     <div class="modal" tabindex="-1" id="signUpModal">
         <div class="modal-dialog">
