--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <!--</div>-->
     </nav>
-    <div class="container alert-container">
+    <!-- <div class="container alert-container">
         <div class="row d-none d-sm-block">
             <div class="col-12">
                 <div class="alert alert-warning">
@@ -59,6 +59,8 @@
                 </div>
             </div>
         </div>
+    </div> -->
+    <div class="container-fluid callout-container">
         <!-- Callout -->
         <div class="row">
             <div class="col-12">
